--- a/blog1_withNoFramework/package.json
+++ b/blog1_withNoFramework/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "cross-env": "^7.0.2",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
